# juce-cmake-package

./: .gitignore  .gitmodules  CMakeLists.txt  test.ini
cmake/: GitUtils.cmake  INIFileParser.cmake  JuceDependencies.cmake  JuceModuleBuilder.cmake  SemVer.cmake
resources/: modules.ini  modules.txt
templates/: AppConfig.h.in  JUCE-config.cmake.in  JuceHeader.h.in  include_juce_module.in
